# air-quality-forecast

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  currentdata.csv  data.csv  dvc.yaml  pre-commit-config.yaml  previousdaysAQI copy.csv  previousdaysAQI.csv  pyproject.toml  requirements.txt
.github/workflows/: api_call.yml  fetch_and_predict.yml  huggingface_deploy.yml  main.yml  predict_and_deploy.yml  running.yml  style.yml
air-quality-forecast/: __init__.py  api_data_call.py  data_pipeline.py  main.py  model_development.py  new_data_processing.py  parser_ui.py  prediction.py  utils.py
air_quality_forecast/: README.md  api_caller.py  get_prediction_data.py  main.py  parser_ui.py  prediction.py
configs/: hyperparameter_search_spaces.yaml
data/: README.md
data/api_data/: currentdata.csv  previousdaysAQI.csv  previousdaysVC.csv
docs/: README.md  conf.py  modules.rst  streamlit_src.models.rst  streamlit_src.rst  streamlit_src.views.rst
dvclive/: metrics.json  params.yaml
extra_scripts/: corr_map.R  feature_importance.tex  histograms.tex  shap_values.py  timeseries.tex  training_eval.tex
notebooks/: Dataset Creation.ipynb  data_merge.ipynb  exploratory_data_analysis.ipynb  n1_data_merge.ipynb  n2_exploratory_data_analysis.ipynb  n3_model_selection_training.ipynb  v2_exploratory_data_analysis.ipynb
saved_models/: decision_tree.pkl  normalizer.joblib  xgboost.pkl  xgboost.xgb
streamlit_src/: README.md  admin_dashboard.py  app.py  facts.json  model_utils.py  question.json  user_dashboard.py
(+2270 files in other folders)
